<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="30dp"
        android:layout_weight="1"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed_value"
                android:textAlignment="center"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="30dp"
        android:layout_weight="1"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/door"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_door"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/door_value"
                android:textAlignment="center"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="30dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/engine"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_engine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/engine_value"
                android:textAlignment="center"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>